================================================================================
Changes since v13.01
================================================================================


--------------------------------------------------------------------------------
general

-- Object clone() method now returns proper return type (i.e., ThisType*) as
   opposed to Eaagles::Basic::Object*.  This change reduces the number of typecasts
   that need to be done in copy constructors and assignment operators.

--------------------------------------------------------------------------------
basic

   Component Class
      1) Fixed memory leak in setSlotComponent();

   Nav Class
      1) Fixed memory leaks in aer2xyzArray() methods

--------------------------------------------------------------------------------
basicGL

   Graphic Class
      1) The data type has been changed from String to Identifier for setColor(),
      getColorName(), the 'color' slot and the SET_COLOR event.
   
--------------------------------------------------------------------------------
dis


--------------------------------------------------------------------------------
gui-glut


--------------------------------------------------------------------------------
otw

   OtwCigiCl Class
      1) setBuildingData() -- added missing creation of the damage control
      structure (bug fix)

--------------------------------------------------------------------------------
recorder


--------------------------------------------------------------------------------
simulation

   Player Class
      1) The data type has been changed from String to Identifier for isName(),
      getName() and setName().

   Station Class
      1) Fixed memory leak in setSlotOutTheWindow();


--------------------------------------------------------------------------------
vehicle


--------------------------------------------------------------------------------
